--- a/cryptodashboardFrontend/src/app/coins/coins.component.html
+++ b/cryptodashboardFrontend/src/app/coins/coins.component.html
@@ -1,6 +1,33 @@
-<h2>{{coin.name | uppercase}} Details</h2>
-<div><span>id: </span>{{coin.id}}</div>
-<div>
-  <label for="name">Coin name: </label>
-  <input id="name" [(ngModel)]="coin.name" placeholder="name">
-</div>
+<table mat-table [dataSource]="coins" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let coin"> {{coin.nameCoin}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="acronym">
+    <th mat-header-cell *matHeaderCellDef> Acronym </th>
+    <td mat-cell *matCellDef="let coin"> {{coin.acronym}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef> Description </th>
+    <td mat-cell *matCellDef="let coin"> {{coin.descriptionCoin}} </td>
+  </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="linkToWikipedia">
+      <th mat-header-cell *matHeaderCellDef> Link to Wikipedia </th>
+      <td mat-cell *matCellDef="let coin"> {{coin.linkToWikipedia}} </td>
+    </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
