--- a/cryptodashboardFrontend/src/app/coins/coins.component.html
+++ b/cryptodashboardFrontend/src/app/coins/coins.component.html
@@ -1,28 +1,19 @@
 <table mat-table [dataSource]="coins" class="mat-elevation-z8">
-
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-
-  <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let coin"> {{coin.nameCoin}} </td>
+    <td mat-cell [routerLink]="['./{coin.nameCoin}']" *matCellDef="let coin"> {{coin.nameCoin}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="acronym">
     <th mat-header-cell *matHeaderCellDef> Acronym </th>
     <td mat-cell *matCellDef="let coin"> {{coin.acronym}} </td>
   </ng-container>
 
-  <!-- Symbol Column -->
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef> Description </th>
     <td mat-cell *matCellDef="let coin"> {{coin.descriptionCoin}} </td>
   </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="linkToWikipedia">
       <th mat-header-cell *matHeaderCellDef> Link to Wikipedia </th>
       <td mat-cell *matCellDef="let coin"> {{coin.linkToWikipedia}} </td>
@@ -33,7 +24,7 @@
 </table>
 
 <div class="example-button-container">
-  <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+  <button  mat-fab  [routerLink]="['../addCoins']" color="primary" aria-label="Example icon button with a delete icon">
     <mat-icon>add</mat-icon>
   </button>
 </div>
