--- a/cryptodashboardFrontend/src/app/coins/coins.component.html
+++ b/cryptodashboardFrontend/src/app/coins/coins.component.html
@@ -1,7 +1,7 @@
 <table mat-table [dataSource]="coins" class="mat-elevation-z8">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell [routerLink]="['./{coin.nameCoin}']" *matCellDef="let coin"> {{coin.nameCoin}} </td>
+    <td mat-cell [routerLink]="['/coins/', coin.nameCoin]" *matCellDef="let coin"> {{coin.nameCoin}} </td>
   </ng-container>
 
   <ng-container matColumnDef="acronym">
@@ -19,8 +19,21 @@
       <td mat-cell *matCellDef="let coin"> {{coin.linkToWikipedia}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef class="TableHeaderRow"></th>            
+      <mat-cell *matCellDef="let coin">
+        <button mat-icon-button color="warn" aria-label="Edit Row" (click)="getRecord(coin)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
 </table>
 
 <div class="example-button-container">
