--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -1,2 +1,27 @@
 <p>{{coin.nameCoin}}</p>
+<table mat-table [dataSource]="results" class="mat-elevation-z8">
+    <ng-container matColumnDef="time">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell [routerLink]="['/coins/', result.time]" *matCellDef="let result"> {{result.time}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="high">
+      <th mat-header-cell *matHeaderCellDef> High </th>
+      <td mat-cell *matCellDef="let result"> {{result.high}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="low">
+      <th mat-header-cell *matHeaderCellDef> Low </th>
+      <td mat-cell *matCellDef="let result"> {{result.low}} </td>
+    </ng-container>
+  
+      <!-- <ng-container matColumnDef="linkToWikipedia">
+        <th mat-header-cell *matHeaderCellDef> Link to Wikipedia </th>
+        <td mat-cell *matCellDef="let coin"> {{coin.linkToWikipedia}} </td>
+      </ng-container> -->
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+  </table>
 
