--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -1,4 +1,5 @@
 <p>{{coin.nameCoin}}</p>
+<plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot>
 <table mat-table [dataSource]="results" class="mat-elevation-z8">
     <ng-container matColumnDef="time">
       <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -15,13 +16,7 @@
       <td mat-cell *matCellDef="let result"> {{result.low}} </td>
     </ng-container>
   
-      <!-- <ng-container matColumnDef="linkToWikipedia">
-        <th mat-header-cell *matHeaderCellDef> Link to Wikipedia </th>
-        <td mat-cell *matCellDef="let coin"> {{coin.linkToWikipedia}} </td>
-      </ng-container> -->
-  
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    
+   
   </table>
-
