Tenemos login con jwt

--- a/cryptodashboardFrontend/src/app/coins/coins.component.html
+++ b/cryptodashboardFrontend/src/app/coins/coins.component.html
@@ -11,7 +11,7 @@
 
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef> Description </th>
-    <td mat-cell *matCellDef="let coin"> {{coin.descriptionCoin}} </td>
+    <td mat-cell *matCellDef="let coin"> {{coin.description}} </td>
   </ng-container>
 
     <ng-container matColumnDef="linkToWikipedia">
