--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -1,5 +1,5 @@
 <p>{{coin.nameCoin}}</p>
-<plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot>
+<!-- <plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot> -->
 <table mat-table [dataSource]="results" class="mat-elevation-z8">
     <ng-container matColumnDef="time">
       <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -16,7 +16,10 @@
       <td mat-cell *matCellDef="let result"> {{result.low}} </td>
     </ng-container>
   
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
    
   </table>
+
+  <div class="example-button-container">
+    <a routerLink="/addExchange" class="btn btn-link">add exchange</a> 
