--- a/cryptodashboardFrontend/src/app/login-user/login-user.component.html
+++ b/cryptodashboardFrontend/src/app/login-user/login-user.component.html
@@ -1,10 +1,10 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="newCoinForm"> 
 
     <div class="form-group">
-       <label for="coinName">Username</label>
-       <input type="text" required formControlName="coinName" class="form-control">
-       <label for="coinDescription">Password</label>
-       <input type="text" required formControlName="coinDescription" class="form-control">
+       <label for="userMail">Mail</label>
+       <input type="text" required formControlName="userEmail" class="form-control">
+       <label for="userPassword">Password</label>
+       <input type="text" required formControlName="userPassword" class="form-control">
    </div>
  
    <div class="form-group">
