Ahora se puede guardar un exchange con la referencia a la moneda a la que pertenece

--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -22,4 +22,4 @@
   </table>
 
   <div class="example-button-container">
-    <a routerLink="/addExchange" class="btn btn-link">add exchange</a> 
+    <a [routerLink]="['/addExchange/', coin.nameCoin]" class="btn btn-link">add exchange</a> 
