--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -1,23 +1,23 @@
 <p>{{coin.nameCoin}}</p>
 <!-- <plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot> -->
 <table mat-table [dataSource]="results" class="mat-elevation-z8">
-    <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell [routerLink]="['/coins/', result.time]" *matCellDef="let result"> {{result.time}} </td>
+    <ng-container matColumnDef="Date">
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell [routerLink]="['/coins/', result.dateCreation]" *matCellDef="let result"> {{result.dateCreation}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="high">
-      <th mat-header-cell *matHeaderCellDef> High </th>
-      <td mat-cell *matCellDef="let result"> {{result.high}} </td>
+    <ng-container matColumnDef="Price">
+      <th mat-header-cell *matHeaderCellDef> Price </th>
+      <td mat-cell *matCellDef="let result"> {{result.price}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="low">
-      <th mat-header-cell *matHeaderCellDef> Low </th>
-      <td mat-cell *matCellDef="let result"> {{result.low}} </td>
+    <ng-container matColumnDef="Exchange">
+      <th mat-header-cell *matHeaderCellDef> Exchange </th>
+      <td mat-cell *matCellDef="let result"> {{result.exchangeName}} </td>
     </ng-container>
   
-    <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
    
   </table>
 
