--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -1,5 +1,6 @@
 <p>{{coin.nameCoin}}</p>
-<!-- <plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot> -->
+<plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot>
+<plotly-plot [data]="graph2.data" [layout]="graph2.layout"></plotly-plot>
 <table mat-table [dataSource]="results" class="mat-elevation-z8">
     <ng-container matColumnDef="Date">
       <th mat-header-cell *matHeaderCellDef> Date </th>
