--- a/cryptodashboardFrontend/src/app/add-user/add-user.component.html
+++ b/cryptodashboardFrontend/src/app/add-user/add-user.component.html
@@ -1,17 +1,22 @@
+<div class="container-fluid">
 <form (ngSubmit)="onSubmit()" [formGroup]="newCoinForm"> 
 
-    <div class="form-group">
-       <label for="userUsername">Username</label>
+    <div class="mb-3">
+       <label for="userUsername"class="form-label">Username</label>
        <input type="text" required formControlName="userUsername" class="form-control">
-       <label for="userMail">Mail</label>
-       <input type="text" required formControlName="userMail" class="form-control">
-       <label for="userPassword">Password</label>
-       <input type="text" required formControlName="userPassword" class="form-control">
    </div>
- 
-   <div class="form-group"> 
+   <div class="mb-3">
+   <label for="userMail"class="form-label">Mail</label>
+   <input type="text" required formControlName="userMail" class="form-control">
+</div>
+<div class="mb-3">
+   <label for="userPassword" class="form-label">Password</label>
+   <input type="text" required formControlName="userPassword" class="form-control">
+</div>
+   <div class="mb-3"> 
        <button class="btn btn-primary" type="submit">Save</button>    
-       <a routerLink="/coins" class="btn btn-link">Cancel</a>
+       <a routerLink="/" class="btn btn-link">Cancel</a>
    </div>
 
 </form>
+  </div>
