--- a/cryptodashboardFrontend/src/app/add-exchange/add-exchange.component.html
+++ b/cryptodashboardFrontend/src/app/add-exchange/add-exchange.component.html
@@ -1,3 +1,18 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">{{title}}</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        </ul>
+        <div *ngIf="sessionOn">
+          <button class="btn btn-outline-success" [routerLink]="['/']">Log out</button>
+        </div>
+      </div>
+    </div>
+  </nav>
 <div class="container-fluid">
 <form (ngSubmit)="onSubmit()" [formGroup]="newExchangeForm"> 
     <div class="mb-3">
