--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -1,3 +1,18 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">{{title}}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      </ul>
+      <div *ngIf="sessionOn">
+        <button class="btn btn-outline-success" [routerLink]="['/']" >Log out</button>
+      </div>
+    </div>
+  </div>
+</nav>
 <div class="container-fluid">
 <p>{{coin.nameCoin}}</p>
 <div class="row">
@@ -8,6 +23,22 @@
     <plotly-plot [data]="graph2.data" [layout]="graph2.layout"></plotly-plot>
   </div>
 </div>
+<form (ngSubmit)="onSubmit()" [formGroup]="newCoinForm"> 
+  <div class="mb-3">
+    <select class="form-select" aria-label="Default select example">
+      <option value ="1"selected>Ayer</option>
+      <option value ="7"selected>1 semana</option>
+      <option value="14">2 semanas</option>
+      <option value="30">1 Mes</option>
+      <option value="90">3 Meses</option>
+      <option value="180">6 Meses</option>
+      <option value="365">1 año</option>
+    </select>
+ </div>
+ <div class="mb-3">
+     <button class="btn btn-primary" type="submit">Login</button>
+ </div>
+</form>
 <table mat-table [dataSource]="results" class="mat-elevation-z8">
     <ng-container matColumnDef="Date">
       <th mat-header-cell *matHeaderCellDef> Date </th>
