--- a/cryptodashboardFrontend/src/app/coins/coins.component.html
+++ b/cryptodashboardFrontend/src/app/coins/coins.component.html
@@ -1,3 +1,18 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">{{title}}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      </ul>
+      <div *ngIf="sessionOn">
+        <button class="btn btn-outline-success" [routerLink]="['/']" >Log out</button>
+      </div>
+    </div>
+  </div>
+</nav>
 <table mat-table [dataSource]="coins" class="mat-elevation-z8">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -19,14 +34,11 @@
       <td mat-cell *matCellDef="let coin"> {{coin.linkToWikipedia}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="actions">
+    <ng-container matColumnDef="Action">
       <th mat-header-cell *matHeaderCellDef class="TableHeaderRow"></th>            
       <mat-cell *matCellDef="let coin">
-        <button mat-icon-button color="warn" aria-label="Edit Row" (click)="getRecord(coin)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
-          <mat-icon>favorite</mat-icon>
+        <button mat-icon-button color="warn" aria-label="Edit Row" (click)="deleteCoin(coin)">
+          <mat-icon>delete</mat-icon>
         </button>
       </mat-cell>
     </ng-container>
