--- a/cryptodashboardFrontend/src/app/coin/coin.component.html
+++ b/cryptodashboardFrontend/src/app/coin/coin.component.html
@@ -23,11 +23,10 @@
     <plotly-plot [data]="graph2.data" [layout]="graph2.layout"></plotly-plot>
   </div>
 </div>
-<form (ngSubmit)="onSubmit()" [formGroup]="newCoinForm"> 
   <div class="mb-3">
-    <select class="form-select" aria-label="Default select example">
+    <select [(ngModel)]="seleccionado" (change)="selectChangeHandler($event)" class="form-select" aria-label="Default select example">
       <option value ="1"selected>Ayer</option>
-      <option value ="7"selected>1 semana</option>
+      <option value ="7">1 semana</option>
       <option value="14">2 semanas</option>
       <option value="30">1 Mes</option>
       <option value="90">3 Meses</option>
@@ -35,10 +34,6 @@
       <option value="365">1 año</option>
     </select>
  </div>
- <div class="mb-3">
-     <button class="btn btn-primary" type="submit">Login</button>
- </div>
-</form>
 <table mat-table [dataSource]="results" class="mat-elevation-z8">
     <ng-container matColumnDef="Date">
       <th mat-header-cell *matHeaderCellDef> Date </th>
